# ARBInterp

./: 3D_ARBInterpExample.py  4D_ARBInterpExample.py  ARBExample.py  ARBInterpExample.py  ARBTrajecExample.py  B_Matrix_3D.csv  CHANGELOG.md  CONTRIBUTING.md  ExampleScalarField.csv  ExampleVectorField.csv  LICENSE  MANIFEST  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-cd.yml
ARBTools/: ARBInterp.py  ARBTrajec.py  __init__.py
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: B_Matrix_4D.csv
src/ARBInterp/: ARBInterp.py
tests/: test_ARBInterp.py
