[metadata]
name = ARBInterp
version = 1.8.1
author = ['Paul Walker']
author_email = paul.a.walker@durham.ac.uk
license = GNU General Public License v3.0
description = Python tools for interpolating 3D or 4D fields
url = https://github.com/DurhamDecLab/ARBInterp
long_description = file: README.txt

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy >= 1.21.1

[options.packages.find]
where=src